--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "manim>=0.19.0",
     "pydantic>=2.11.5",
     "python-dotenv>=1.1.0",
-    "fastapi>=0.92.0",
-    "uvicorn>=0.20.0"
+    "fastapi[standard]>=0.92.0",
+    "uvicorn>=0.20.0",
+    "pocketflow>=0.0.3",
 ]
