--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     container_name: celery
     build:
       context: ./backend/
+    working_dir: /usr/src/app/src
     command: >
       sh -c "
         celery -A dcelery worker --loglevel=info
@@ -20,13 +21,15 @@ services:
     container_name: fastapi
     build:
       context: ./backend/
-    command: fastapi dev main.py --host 0.0.0.0 --port 8000
+    working_dir: /usr/src/app
+    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    volumes:
+      - ./backend:/usr/src/app
     ports:
       - 8000:8000
     env_file:
       - .env
     environment:
-      - PORT=${PORT}
       - GITHUB_TOKEN=${GITHUB_TOKEN}
       - OPENROUTER_API=${OPENROUTER_API}
     depends_on:
